# docker-compose-dsl

./: .gitignore  LICENSE  README.md  haskell-docker-compose.cabal  stack.yaml
app/: Main.hs
src/: DockerCompose.hs
src/DockerCompose/: API.hs  ComposeTree.hs  Generator.hs  Keys.hs  Serialize.hs  SpecialChars.hs
test/: DockerComposeSpec.hs  Spec.hs
