name:                haskell-docker-compose
version:             0.1.0.0
synopsis:            A Type level dsl for docker compose
description:         See readme
homepage:            http://github.com/amarpotghan/docker-compose-dsl#readme
license:             BSD3
license-file:        LICENSE
author:              Amar Potghan
maintainer:          amarpotghan@gmail.com
copyright:           2016 Amar Potghan
category:            
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DockerCompose
  other-modules:       DockerCompose.API
                     , DockerCompose.Generator
                     , DockerCompose.Keys
                     , DockerCompose.ComposeTree
                     , DockerCompose.Serialize
                     , DockerCompose.SpecialChars
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , text
  default-language:    Haskell2010

executable haskell-docker-compose-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-docker-compose
  default-language:    Haskell2010

test-suite haskell-docker-compose-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-docker-compose
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/amarpotghan/docker-compose-dsl
